--- a/CFC Digest Editor/Main.resx
+++ b/CFC Digest Editor/Main.resx
@@ -127,8 +127,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACI
-        CAAAAk1TRnQBSQFMAgEBAgEAAVgBAAFYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADa
+        CQAAAk1TRnQBSQFMAgEBAwEAAagBAAGoAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -156,21 +156,27 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wIAAf8BDwoOAQ8B/wIA
-        DnoBWSEAAf8BEQoAAREB/wEAD3oBWSEAAf8BEQoAAREB/wEAD3oBWSEAAf8BEQoAAREB/wEAD3oBWSEA
-        Af8BEQoAAREB/wEAD3oBWSEAAf8BEQoAAREB/wEAD3oBWSEAAf8BEQoAAREB/wEAD3oBWSEAAf8BEQoA
-        AREB/wEAD3oBWSEAAf8BEQoAAREB/wEAD3oBWSEAAf8BEQoAAREB/wEAAVkI/wZ6AVkhAAH/AREKAAER
-        Af8BAAFZCf8FegFZIQAB/wERBgAE/wEQAf8BAAFZDRkB4QF1IQAB/wERBgABBwEQARUBDgEPAf8BAA9Z
-        AVMhAAH/AREGAAHvAQcB8AFDAfMCAAhZKQAB/wERBgAB7wIUAfQDAAH/BlkqAAH/AQ8GDgEAAW0B/zQA
-        AUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAGAAQEBgAUAAZ8B+QYAAZ8B+QYA
-        AZ8B+QYAAZ8B+QYAAZ8B+QYAAZ8B+QYAAZ8B+QYAAZ8B+QYAAZ8B+QYAAZ8B+QYAAZ8BgQYAAZ8BgQYA
-        AZ8BgwEAAf8EAAGfAYcBAQH/BAABgAEPAv8EAAs=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wQACSIB8AQADnoBWQYA
+        AewE/xcAASIJMgEHAwAPegFZBgAB8gEHAfIB8RgAASIBMgZSAjIB7AG8AfEBAA96AVkCAAF6BDgB8gH/
+        AbwCWQErATEUAAEiCTIBUgEyASIBAA96AVkBAAH/AjIDOAEHAfQBBwRZATETAAEiATIFRAEiAjIBUgEy
+        ASIBAA96AVkBAAEbAzICOAG8AQcBHAVZEwABIgkyAVIBMgEiAQAPegFZAQABGwUyAbwB8QG8BVkTAAEi
+        ATIBDwMAAQ4DMgFSATIBIgEAD3oBWQEAARsEMgFZAfIC/wE4BFkTAAEiCTIBUgEyASIBAA96AVkBAAEb
+        BDIBOAHzAf8BQwI4A1kTAAEiATICRAEiBTIBUgEyASIBAA96AVkBAAEbBDIBOAHvAbwBDwM4AlkTAAEi
+        BTIBDgJSAQ4CMgEiAQABWQj/BnoBWQEAARsEMgE4AewBvAEOBDgBWRMAASIBMgJSAjIBAAEyAQ4DMgEi
+        AQABWQn/BXoBWQEAARsEMgE4AREBvAEABTgTAAEiBTICDgEyAg4BIgEOAQABWQ0ZAeEBdQEAARsEMgE4
+        ARUB8AEOATIEOBkAAQ4CMgHsATIBEwHzAQAPWQFTAQABGwQyATgB7AG8AQ4BMgQ4FQAB8AYyAfcBDgH0
+        AgAIWQoAATgDMgE4Ae8BvAEPAzIBOAFZFQABvAFTBTIBAAH0AwAB/wZZDAABmgN6AQcB8gHrA3oB9BYA
+        Af8BbQTsAesB8jQAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAHAAQcBgAEA
+        AfwBHwIAAcABBwIAAfwBPwIAAcABAQIAAcABAwIAAcABAQIAAYABAQIAAcABAQIAAYABAQIAAcABAQIA
+        AYABAQIAAcABAQIAAYABAQIAAcABAQIAAYABAQIAAcABAQIAAYABAQIAAcABAQIAAYABAQIAAcABAQIA
+        AYABAQIAAcABAQIAAYABAQIAAcABAQIAAYABAQIAAfABAwEAAf8BwAEBAgAB8AEHAQEB/wHgAQMCAAHw
+        AQ8E/wIACw==
 </value>
   </data>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="FolderMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>132, 17</value>
   </metadata>
-  <metadata name="contextMenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="FileMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>287, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
